--- a/5d-proof-verification-with-mulitverse-time-travel.cabal
+++ b/5d-proof-verification-with-mulitverse-time-travel.cabal
@@ -66,13 +66,16 @@ executable 5d-proof-verification-with-mulitverse-time-travel
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+        Math.Expression
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.16.4.0
+    build-depends:  
+        base ^>=4.16.4.0, 
+        natural-numbers
 
     -- Directories containing source files.
     hs-source-dirs:   app
