--- a/5d-proof-verification-with-mulitverse-time-travel.cabal
+++ b/5d-proof-verification-with-mulitverse-time-travel.cabal
@@ -56,7 +56,7 @@ extra-doc-files:    CHANGELOG.md
 -- extra-source-files:
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wno-partial-type-signatures
 
 executable 5d-proof-verification-with-mulitverse-time-travel
     -- Import common warning flags.
