--- a/5d-proof-verification-with-mulitverse-time-travel.cabal
+++ b/5d-proof-verification-with-mulitverse-time-travel.cabal
@@ -68,6 +68,7 @@ executable 5d-proof-verification-with-mulitverse-time-travel
     -- Modules included in this executable, other than Main.
     other-modules:
         Math.Expression
+        Math.Rules
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
